--- a/rootfs/rootfs/etc/sysctl.conf
+++ b/rootfs/rootfs/etc/sysctl.conf
@@ -1,2 +1,3 @@
 net.ipv4.ip_forward=1
-net.ipv6.conf.all.forwarding=1
+# @TODO: To avoid segfault, need to make sure that /proc/sys/net/ipv6/ exists before enabling.
+# net.ipv6.conf.all.forwarding=1
